# starrocks

./: .gitignore  build.sh  ve-build.sh
.codebase/: run-sr-format-sdk-test.sh  run-sr-segment-export.sh  settings.xml  setup.sql  setup_share_nothing.sql  start_mini_cluster.sh  start_minio.sh  start_share_nothing_mini_cluster.sh  stop_mini_cluster.sh
.codebase/pipelines/: ci.yaml
be/: CMakeLists.txt
be/src/agent/: agent_server.cpp
be/src/column/: field.h
be/src/common/: config.h  statusor.cpp
be/src/exec/: olap_scan_prepare.cpp
be/src/exprs/: function_context.cpp
be/src/exprs/agg/factory/: aggregate_resolver.hpp
be/src/fs/: CMakeLists.txt  fs.cpp  fs.h  fs_s3.cpp
be/src/http/action/: datacache_action.cpp
be/src/io/: s3_input_stream.cpp  s3_input_stream.h
be/src/runtime/: descriptors.cpp  descriptors.h  exec_env.cpp  exec_env.h  fragment_mgr.cpp  time_types.h
be/src/service/: CMakeLists.txt  staros_worker.cpp
be/src/service/service_be/: http_service.cpp
be/src/starrocks_format/: CMakeLists.txt  starrocks_lib.cpp  starrocks_lib.h
be/src/storage/: CMakeLists.txt  olap_common.h  protobuf_file.h  push_handler.cpp
be/src/storage/lake/: general_tablet_writer.cpp  horizontal_compaction_task.cpp  lake_delvec_loader.cpp  lake_delvec_loader.h  meta_file.cpp  meta_file.h  pk_tablet_writer.cpp  rowset.cpp  rowset.h  tablet.cpp  tablet.h  tablet_manager.cpp  tablet_manager.h  tablet_reader.cpp  tablet_reader.h  tablet_writer.h  update_manager.cpp  update_manager.h  vertical_compaction_task.cpp
be/src/storage/rowset/: rowset_writer.cpp  rowset_writer.h  scalar_column_iterator.cpp  segment.cpp  segment_iterator.cpp
be/src/storage/task/: engine_batch_load_task.cpp
be/src/types/: date_value.cpp  logical_type_infra.h  timestamp_value.cpp  timestamp_value.h
be/test/exec/: lake_meta_scanner_test.cpp
be/test/runtime/: lake_tablets_channel_test.cpp  load_channel_test.cpp
be/test/storage/lake/: meta_file_test.cpp  replication_txn_manager_test.cpp  rowset_test.cpp  schema_change_test.cpp  tablet_manager_test.cpp  test_util.h
docker/dockerfiles/dev-env/: emr-dev-env.Dockerfile
docker/ve-emr/: settings.xml
fe/: checkstyle.xml  pom.xml
fe/fe-core/: pom.xml
fe/fe-core/src/main/java/com/starrocks/backup/: BlobStorage.java
fe/fe-core/src/main/java/com/starrocks/catalog/: FunctionSet.java
fe/fe-core/src/main/java/com/starrocks/common/: AuditLog.java  Config.java  QueryDumpLog.java
fe/fe-core/src/main/java/com/starrocks/common/util/: BrokerUtil.java
fe/fe-core/src/main/java/com/starrocks/fs/: HdfsUtil.java
fe/fe-core/src/main/java/com/starrocks/fs/hdfs/: HdfsFsManager.java  WildcardURI.java
fe/fe-core/src/main/java/com/starrocks/http/: HttpServer.java
fe/fe-core/src/main/java/com/starrocks/leader/: LeaderImpl.java
fe/fe-core/src/main/java/com/starrocks/load/: BrokerFileGroup.java  EtlStatus.java  PartitionUtils.java
fe/fe-core/src/main/java/com/starrocks/metric/: TableMetricsEntity.java
fe/fe-core/src/main/java/com/starrocks/planner/: PlanNode.java
fe/fe-core/src/main/java/com/starrocks/qe/: QueryState.java
fe/fe-core/src/main/java/com/starrocks/server/: GlobalStateMgr.java  SharedDataStorageVolumeMgr.java
fe/fe-core/src/main/java/com/starrocks/task/: PushTask.java
fe/fe-core/src/main/java/com/starrocks/transaction/: DatabaseTransactionMgr.java  TransactionState.java
fe/fe-core/src/test/java/com/starrocks/http/: MetaInfoServiceTest.java  StarRocksHttpTestCase.java  TableDetailActionTest.java  TransactionLoadActionOnSharedDataClusterTest.java  TransactionLoadActionTest.java
fe/plugin-common/: pom.xml
gensrc/thrift/: PlanNodes.thrift  Types.thrift
starrocks_format_sdk/: README.txt  pom.xml
starrocks_format_sdk/src/main/cpp/: CMakeLists.txt  jni_column_wrapper.cpp  jni_utils.h  jni_wrapper.cpp
starrocks_format_sdk/src/main/cpp/format/: CMakeLists.txt  format_utils.h  starrocks_format_chunk.cpp  starrocks_format_chunk.h  starrocks_format_reader.cpp  starrocks_format_reader.h  starrocks_format_writer.cpp  starrocks_format_writer.h
starrocks_format_sdk/src/main/java/com/starrocks/format/: Chunk.java  Column.java  DataType.java  JniException.java  JniLoader.java  JniWrapper.java  StarRocksReader.java  StarRocksWriter.java  StarrocksReader.java  StarrocksWriter.java
starrocks_format_sdk/src/main/java/com/starrocks/format/rest/: LoadNonSupportException.java  RequestException.java  RestClient.java  Validator.java
starrocks_format_sdk/src/test/java/com/starrocks/format/: BaseFormatTest.java  ConnSettings.java  SegmentExportTest.java  StarRocksReaderTest.java  StarRocksReaderWriterTest.java  StarRocksWriterTest.java  StarrocksReaderTest.java  StarrocksWriterTest.java  ValidatorTest.java
starrocks_format_sdk/src/test/java/com/starrocks/format/rest/: RestService.java
starrocks_format_sdk/src/test/resources/: log4j2-test.xml  starrocks_conn.properties.template
(+43 files in other folders)
